<resources>
    <string name="app_name">MyAndroidHandbook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Справочник по Android</string>
    <string name="nav_header_subtitle">Andrey Kazanchan, v.1</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_layouts">Layouts (Макеты)</string>
    <string name="menu_views">Views (Элементы)</string>
    <string name="menu_codes">Java codes (Код)</string>
    <string name="menu_tips">Useful tips (Советы)</string>
    <string name="menu_theory">Some theory (Теория)</string>
    <string name="text_view_layout1">
        FrameLayout
        FrameLayout является самым простым типом разметки. Обычно это пустое пространство на экране, которое можно заполнить только дочерними объектами View или ViewGroup. Все дочерние элементы FrameLayout прикрепляются к верхнему левому углу экрана.
        В разметке FrameLayout нельзя определить различное местоположение для дочернего объекта. Последующие дочерние объекты View будут просто рисоваться поверх предыдущих компонентов, частично или полностью затеняя их, если находящийся сверху объект непрозрачен, поэтому единственный дочерний элемент для FrameLayout обычно растянут до размеров родительского контейнера и имеет атрибуты:

        android:layout_width="match_parent"
        android:layout_height="match_parent"

        Также можно использовать свойства Gravity для управления порядком размещения.
        FrameLayout можно использовать для интересного эффекта, когда верхняя часть (TextView) остаётся неизменной, а основной контент прокручивается.
    </string>
    <string name="text_view_layout2">
        ConstraintLayout
        ConstraintLayout представляет новый тип контейнеров, который является развитием RelativeLayout и позволяет создавать гибкие и масштабируемые интерфейсы.
        Начиная с версии Android Studio 2.3 ConstraintLayout был добавлен в список стандартных компонентов и даже является контейнером, который используется в файлах layout по умолчанию. Однако если вы используете Android Studio 2.2 или ниже, то в этом случае функциональность ConstraintLayout надо дополнительно добавлять.
        Для позиционирования элемента внутри ConstraintLayout необходимо указать ограничения (constraints). Есть несколько типов ограничений. В частности, для установки позиции относительно определенного элемента испльзуются следующие ограничения:
        layout_constraintLeft_toLeftOf: левая граница позиционируется относительно левой границы другого элемента
        layout_constraintLeft_toRightOf: левая граница позиционируется относительно правой границы другого элемента
        layout_constraintRight_toLeftOf: правая граница позиционируется относительно левой границы другого элемента
        layout_constraintRight_toRightOf: правая граница позиционируется относительно правой границы другого элемента
        layout_constraintTop_toTopOf: верхняя граница позиционируется относительно верхней границы другого элемента
        layout_constraintBottom_toBottomOf: нижняя граница позиционируется относительно нижней границы другого элемента
        layout_constraintBaseline_toBaselineOf: базовая линия позиционируется относительно базовой линии другого элемента
        layout_constraintTop_toBottomOf: верхняя граница позиционируется относительно нижней границы другого элемента
        layout_constraintBottom_toTopOf: нижняя граница позиционируется относительно верхней границы другого элемента
        layout_constraintStart_toEndOf: аналог layout_constraintLeft_toRightOf
        layout_constraintStart_toStartOf: аналог layout_constraintLeft_toLeftOf
        layout_constraintEnd_toStartOf: аналог layout_constraintRight_toLeftOf
        layout_constraintEnd_toEndOf: аналог layout_constraintRight_toRightOf
        Позиционирования может производиться относительно границ самого контейнера ContentLayout (в этом случае ограничение имеет значение "parent"), либо же относительно любого другого элемента внутри ConstraintLayout, тогда в качестве значения ограничения указывается id этого элемента.
        Чтобы указать отступы от элемента, относительно которого производится позиционирования, применяются следующие атрибуты:
        android:layout_marginLeft: отступ от левой границы
        android:layout_marginRight: отступ от правой границы
        android:layout_marginTop: отступ от верхней границы
        android:layout_marginBottom: отступ от нижней границы
        android:layout_marginStart: отступ от левой границы
        android:layout_marginEnd: отступ от правой границы
    </string>
    <string name="text_view_layout3">
        LinearLayout
        Контейнер LinearLayout представляет объект ViewGroup, который упорядочивает все дочерние элементы в одном направлении: по горизонтали или по вертикали. Все элемены расположены один за другим. Направление разметки указывается с помощью атрибута android:orientation.
        Если, например, ориентация разметки вертикальная (android:orientation="vertical"), то все элементы располагаются в столбик - по одному элементу на каждой строке. Если ориентация горизонтальная (android:orientation="horizontal"), то элементы располагаются в одну строку.
        Если для LinearLayout указать атрибут android:orientation="vertical", то элементы будут размещены по вертикали, а если указать атрибут android:orientation="horizontal", то - по горизонтали.
        LinearLayout поддерживает такое свойство, как вес элемента, которое передается атрибутом android:layout_weight. Это свойство принимает значение, указывающее, какую часть оставшегося свободного места контейнера по отношению к другим объектам займет данный элемент. Например, если один элемент у нас будет иметь для свойства android:layout_weight значение 2, а другой - значение 1, то в сумме они дадут 3, поэтому первый элемент будет занимать 2/3 оставшегося пространства, а второй - 1/3.
        Если все элементы имеют значение android:layout_weight="1", то все эти элементы будут равномерно распределены по всей площади контейнера
    </string>
    <string name="text_view_layout4">
        RelativeLayout
        RelativeLayout представляет объект ViewGroup, который располагает дочерние элементы относительно позиции других дочерних элементов разметки или относительно области самой разметки RelativeLayout. Используя относительное позиционирование, мы можем установить элемент по правому краю или в центре или иным способом, который предоставляет данный контейнер. Для установки элемента в файле xml мы можем применять следующие атрибуты:
        android:layout_above: располагает элемент над элементом с указанным Id
        android:layout_below: располагает элемент под элементом с указанным Id
        android:layout_toLeftOf: располагается слева от элемента с указанным Id
        android:layout_toRightOf: располагается справа от элемента с указанным Id
        android:layout_alignBottom: выравнивает элемент по нижней границе другого элемента с указанным id
        android:layout_alignLeft: выравнивает элемент по левой границе другого элемента с указанным Id
        android:layout_alignRight: выравнивает элемент по правой границе другого элемента с указанным Id
        android:layout_alignTop: выравнивает элемент по верхней границе другого элемента с указанным Id
        android:layout_alignBaseline: выравнивает базовую линию элемента по базовой линии другого элемента с указанным Id
        android:layout_alignParentBottom: если атрибут имеет значение true, то элемент прижимается к нижней границе контейнера
        android:layout_alignParentRight: если атрибут имеет значение true, то элемент прижимается к правому краю контейнера
        android:layout_alignParentLeft: если атрибут имеет значение true, то элемент прижимается к левому краю контейнера
        android:layout_alignParentTop: если атрибут имеет значение true, то элемент прижимается к верхней границе контейнера
        android:layout_centerInParent: если атрибут имеет значение true, то элемент располагается по центру родительского контейнера
        android:layout_centerHorizontal: при значении true выравнивает элемент по центру по горизонтали
        android:layout_centerVertical: при значении true выравнивает элемент по центру по вертикали
        Для позиционирования относительно другого элемента, нам надо указать id этого элемента.
        Чтобы задать положение элемента в контейнере, применяется класс RelativeLayout.LayoutParams. Через конструктор устанавливаются значения для ширины и высоты. Например, у элемента EditText для ширины устанавливается значение MATCH_PARENT, а для высоты - WRAP_CONTENT.
        С помощью метода addRule() мы можем добавлять дополнительные правила для позиционирования элемента. Этот метод в качестве параметра принимает числовую константу, которая представляет параметр позиционирования и которая аналогична атрибуту. Например, атрибуту android:layout_centerInParent будет соответствовать константа CENTER_IN_PARENT, а атрибуту android:layout_alignRight константа ALIGN_RIGHT.
        Стоит отметить, что в целях упрощения кода для установки id у EditText вызывается метод generateViewId();, который позволяет программно сгенерировать id для элемента управления.
        Затем установленный id передается в качестве второго параметра в метод addRule при установке правил для кнопки:
        buttonParams.addRule(RelativeLayout.BELOW, editText.getId());
        Тем самым мы указываем относительно какого элемента надо задать расположение.
    </string>
    <string name="text_view_layout5">
        TableLayout
        Контейнер TableLayout структурирует элементы управления по столбцам и строкам. Определим в файле activity_main.xml элемент TableLayout, который будет включать две строки и два столбца:
        Используя элемент TableRow, мы создаем отдельную строку. Как разметка узнает сколько столбцов надо создать? Android находит строку с максимальным количеством виджетов одного уровня, и это количество будет означать количество столбцов. Например, в данном случае у нас определены две строки и в каждой по два элемента. Если бы в какой-нибудь из них было бы три виджета, то соответственно столбцов было бы также три, даже если в другой строке осталось бы два виджета.Причем элемент TableRow наследуется от класса LinearLayout, поэтому мы можем к нему применять тот же функционал, что и к LinearLayout. В частности, для определения пространства для элементов в строке используется атрибут android:layout_weight.
        Если какой-то элемент должен быть растянут на ряд столбцов, то мы можем растянуть его с помощью атрибута layout_span, который указывает на какое количество столбцов надо растянуть элемент:
    </string>
</resources>