<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/id_layouts"
            android:icon="@drawable/ic_handbook_layouts_foreground"
            android:title="@string/menu_layouts" />
        <item
            android:id="@+id/id_views"
            android:icon="@drawable/ic_handbook_views_foreground"
            android:title="@string/menu_views" />
        <item
            android:id="@+id/id_codes"
            android:icon="@drawable/ic_handbook_code_foreground"
            android:title="@string/menu_codes" />
        <item
            android:id="@+id/id_tips"
            android:icon="@drawable/ic_handbook_tips"
            android:title="@string/menu_tips" />
        <item
            android:id="@+id/id_theory"
            android:icon="@drawable/ic_handbook_theory_foreground"
            android:title="@string/menu_theory" />

    </group>
</menu>